Show zero favorites message when the user removes their favorites SGFE-1175. Fixed Shuffe.remove() not updating visible items count. So close to 4k lines!

--- a/src/packages/modules/gallery-g2-g3/css/gallery-g2-g3.scss
+++ b/src/packages/modules/gallery-g2-g3/css/gallery-g2-g3.scss
@@ -153,6 +153,11 @@ $gifHeight: 60px;
 .gallery-favorites {
   position: relative;
   z-index: 1;
+
+  // Slide up
+  .shuffle.no-height {
+    height: 0 !important; // override inline style set by shuffle
+  }
 }
 
 // Recommended Tile
